crates/analyzer/tests/snapshots/errors__bad_ingot.snap
---
source: crates/analyzer/tests/errors.rs
expression: error_string_ingot(&path)

---
error: import name conflicts with the ingot named "std"
  ┌─ compile_errors/bad_ingot/src/bing.fe:1:5
  │
1 │ use std
  │     ^^^ `std` is already defined

error: cannot glob import from struct
  ┌─ compile_errors/bad_ingot/src/foo.fe:1:18
  │
1 │ use ingot::bing::Bong::*
  │                  ^^^^ prefix item must be a module

error: unresolved path item
  ┌─ compile_errors/bad_ingot/src/foo.fe:2:18
  │
2 │ use ingot::bing::Tong
  │                  ^^^^ not found

error: import name conflicts with the ingot named "std"
  ┌─ compile_errors/bad_ingot/src/foo.fe:3:20
  │
3 │ use ingot::bing as std
  │                    ^^^ `std` is already defined

error: unresolved path item
  ┌─ compile_errors/bad_ingot/src/main.fe:1:5
  │
1 │ use bar::Baz
  │     ^^^ not found

error: unresolved path item
  ┌─ compile_errors/bad_ingot/src/main.fe:2:33
  │
2 │ use biz::bad::{Bur, Bud as Bar, Boo}
  │                                 ^^^ not found

error: unresolved path item
  ┌─ compile_errors/bad_ingot/src/main.fe:3:10
  │
3 │ use biz::Bark
  │          ^^^^ not found

error: unresolved path item
  ┌─ compile_errors/bad_ingot/src/main.fe:4:5
  │
4 │ use none::*
  │     ^^^^ not found

error: a struct with the same name has already been imported
  ┌─ compile_errors/bad_ingot/src/main.fe:2:28
  │
2 │ use biz::bad::{Bur, Bud as Bar, Boo}
  │                            ^^^ `Bar` first defined here
  ·
6 │ contract Bar {
  │          --- `Bar` redefined here

error: function name conflicts with the ingot named "std"
   ┌─ compile_errors/bad_ingot/src/main.fe:12:4
   │
12 │ fn std() {}
   │    ^^^ `std` is already defined

error: the struct `Foo` is private
  ┌─ compile_errors/bad_ingot/src/main.fe:7:19
  │
7 │     pub fn a() -> foo::Foo {
  │                   ^^^^^^^^ this struct is not `pub`
  │
  ┌─ compile_errors/bad_ingot/src/foo.fe:5:8
  │
5 │ struct Foo {
  │        --- `Foo` is defined here
  │
  = `Foo` can only be used within `foo`
  = Hint: use `pub` to make `Foo` visible from outside of `foo`

error: the struct `Foo` is private
  ┌─ compile_errors/bad_ingot/src/main.fe:8:16
  │
8 │         return foo::Foo(my_num: true)
  │                ^^^^^^^^ this struct is not `pub`
  │
  ┌─ compile_errors/bad_ingot/src/foo.fe:5:8
  │
5 │ struct Foo {
  │        --- `Foo` is defined here
  │
  = `Foo` can only be used within `foo`
  = Hint: use `pub` to make `Foo` visible from outside of `foo`

error: unresolved path item
  ┌─ compile_errors/bad_ingot/src/main.fe:8:16
  │
8 │         return foo::Foo(my_num: true)
  │                ^^^^^^^^ not found


