crates/analyzer/tests/snapshots/errors__bad_map5.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `map` key must be a primitive type
  ┌─ [snippet]:3:10
  │
3 │   x: Map<Map<u8, u8>, address>
  │          ^^^^^^^^^^^ this can't be used as a map key


