crates/analyzer/tests/snapshots/errors__bad_tuple_attr1.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: No field `iteo0` exists on this tuple
  ┌─ compile_errors/bad_tuple_attr1.fe:6:27
  │
6 │         self.my_sto_tuple.iteo0
  │                           ^^^^^ undefined field
  │
  = Note: Tuple values are accessed via `itemN` properties such as `item0` or `item1`


